[gd_scene load_steps=24 format=3 uid="uid://ldrwgxrqjjg5"]

[ext_resource type="PackedScene" uid="uid://bamnjdr8d0t4a" path="res://juego/personajes/escenas/personaje_viejo.tscn" id="1_0t4ck"]
[ext_resource type="Script" uid="uid://dsctlvcrmcgdt" path="res://juego/gameplay/scripts/partida.gd" id="1_pfv7k"]
[ext_resource type="Shader" uid="uid://bwadeem3p20ga" path="res://juego/gameplay/shaders/partida.gdshader" id="2_3vs70"]
[ext_resource type="PackedScene" uid="uid://cy71e8ghnbt4h" path="res://menu_viejo/menu_final_partida/escenas/menu_final.tscn" id="2_a0wv1"]
[ext_resource type="Texture2D" uid="uid://dyhf76xqm1put" path="res://juego/gameplay/assets/cuadrado_blanco.jpg" id="3_y0x6b"]
[ext_resource type="SpriteFrames" path="res://juego/gameplay/escenas/personajes/kirby.tres" id="5_pfv7k"]
[ext_resource type="PackedScene" uid="uid://dd36j1c11e0cl" path="res://juego/barra_vida_2/escenas/barra.tscn" id="6_1eyvx"]
[ext_resource type="PackedScene" uid="uid://uhkfrl02c26l" path="res://juego/timer/escenas/timer.tscn" id="7_hpts1"]
[ext_resource type="PackedScene" uid="uid://d07l85r3exlen" path="res://juego/botones/botones.tscn" id="7_htvet"]
[ext_resource type="PackedScene" uid="uid://c3idsj77kmk8h" path="res://juego/Fondo/escenas/auto_scroller.tscn" id="8_tihru"]
[ext_resource type="Texture2D" uid="uid://kf8t7moxds3q" path="res://juego/gameplay/assets/Arrows.png" id="9_kklxi"]
[ext_resource type="FontFile" uid="uid://bokj4j165xofw" path="res://Assets/fuentes/Lambda-Regular.otf" id="10_s5joy"]
[ext_resource type="Shader" uid="uid://cptu6m8orjgbg" path="res://juego/gameplay/shaders/kaleido.gdshader" id="12_y0x6b"]

[sub_resource type="Animation" id="Animation_kfnal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Block:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Break:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Dodge:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 328)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pantalla/FondoEstatico/SubViewport/KaleidoRojo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Pantalla/Personajesvp/SubViewport/Fondo:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Pantalla/FondoEstatico/SubViewport/KaleidoRosa:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y0x6b"]
resource_name = "ataque_especial_p1"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7),
"transitions": PackedFloat32Array(0.196146, 1, 1, 1),
"update": 0,
"values": [Vector2(576, 328), Vector2(444.71, 336), Vector2(444.71, 336), Vector2(576, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1e-05, 0.196146, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/FondoEstatico/SubViewport/KaleidoRojo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pantalla/Personajesvp/SubViewport/Fondo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}

[sub_resource type="Animation" id="Animation_a0wv1"]
resource_name = "ataque_especial_p2"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6, 0.7),
"transitions": PackedFloat32Array(0.196146, 1, 1, 1),
"update": 0,
"values": [Vector2(576, 328), Vector2(710, 343), Vector2(710, 343), Vector2(576, 328)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1e-05, 0.196146, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/Personajesvp/SubViewport/Fondo:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pantalla/FondoEstatico/SubViewport/KaleidoRosa:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tihru"]
resource_name = "bloquear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.366667),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Block:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_kklxi"]
resource_name = "escudo_roto"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Break:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_s5joy"]
resource_name = "esquivar"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pantalla/Personajesvp/SubViewport/Node2D/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.196146, 0.143587, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pausar_personajes"
}, {
"args": [],
"method": &"reanudar_personajes"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pantalla/Personajesvp/SubViewport/Marker2D/Dodge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfnal"]
_data = {
&"RESET": SubResource("Animation_kfnal"),
&"ataque_especial_p1": SubResource("Animation_y0x6b"),
&"ataque_especial_p2": SubResource("Animation_a0wv1"),
&"bloquear": SubResource("Animation_tihru"),
&"escudo_roto": SubResource("Animation_kklxi"),
&"esquivar": SubResource("Animation_s5joy")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a0wv1"]
shader = ExtResource("2_3vs70")
shader_parameter/fisheye_strength = 0.93

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y0x6b"]
shader = ExtResource("12_y0x6b")
shader_parameter/animate_speed = 0.5
shader_parameter/resolution = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_3vs70"]
font = ExtResource("10_s5joy")
font_size = 90

[node name="Partida" type="Node2D"]
script = ExtResource("1_pfv7k")
escena_final = ExtResource("2_a0wv1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kfnal")
}

[node name="Shader" type="TextureRect" parent="."]
visible = false
z_index = 12
material = SubResource("ShaderMaterial_a0wv1")
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="Personajes" type="Node" parent="."]

[node name="TimerPoder" type="Timer" parent="Personajes"]
autostart = true

[node name="Pantalla" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HUDvp" type="SubViewportContainer" parent="Pantalla"]
z_index = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stretch = true
mouse_target = true

[node name="SubViewport" type="SubViewport" parent="Pantalla/HUDvp"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="HUD" type="Control" parent="Pantalla/HUDvp/SubViewport"]
visibility_layer = 8
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BarrasVida" parent="Pantalla/HUDvp/SubViewport/HUD" node_paths=PackedStringArray("personaje_1", "personaje_2") instance=ExtResource("6_1eyvx")]
personaje_1 = NodePath("../../../../Personajesvp/SubViewport/Node2D/Personaje1")
personaje_2 = NodePath("../../../../Personajesvp/SubViewport/Node2D/Personaje2")
metadata/_edit_lock_ = true

[node name="Reloj" parent="Pantalla/HUDvp/SubViewport/HUD" instance=ExtResource("7_hpts1")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 524.0
offset_top = 39.0
offset_right = 654.0
offset_bottom = 169.0
scale = Vector2(0.8, 0.8)
metadata/_edit_lock_ = true

[node name="Control" parent="Pantalla/HUDvp/SubViewport/HUD" instance=ExtResource("7_htvet")]
layout_mode = 1

[node name="FondoEstatico" type="SubViewportContainer" parent="Pantalla"]
visible = false
z_index = -1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Pantalla/FondoEstatico"]
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(1152, 648)
render_target_update_mode = 0

[node name="KaleidoRojo" type="TextureRect" parent="Pantalla/FondoEstatico/SubViewport"]
visible = false
modulate = Color(0.641733, 0, 0.203657, 1)
material = SubResource("ShaderMaterial_y0x6b")
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="KaleidoRosa" type="TextureRect" parent="Pantalla/FondoEstatico/SubViewport"]
visible = false
modulate = Color(0.925117, 0.0909313, 0.887361, 1)
material = SubResource("ShaderMaterial_y0x6b")
offset_right = 1154.0
offset_bottom = 646.0
texture = ExtResource("3_y0x6b")

[node name="Personajesvp" type="SubViewportContainer" parent="Pantalla"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="Pantalla/Personajesvp"]
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="Pantalla/Personajesvp/SubViewport"]
z_index = 1

[node name="Personaje1" parent="Pantalla/Personajesvp/SubViewport/Node2D" instance=ExtResource("1_0t4ck")]
unique_name_in_owner = true
z_index = 2
position = Vector2(277, 168)
nombre_personaje = &"Knuckles"

[node name="Personaje2" parent="Pantalla/Personajesvp/SubViewport/Node2D" instance=ExtResource("1_0t4ck")]
unique_name_in_owner = true
visibility_layer = 2
z_index = 1
position = Vector2(1053, 195)
spriteframe = ExtResource("5_pfv7k")
nombre_personaje = &"Kirby"

[node name="Camera2D" type="Camera2D" parent="Pantalla/Personajesvp/SubViewport/Node2D"]
position = Vector2(576, 328)

[node name="Marker2D" type="Marker2D" parent="Pantalla/Personajesvp/SubViewport"]
z_index = 3
position = Vector2(571, 221)

[node name="Block" type="Label" parent="Pantalla/Personajesvp/SubViewport/Marker2D"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "BLOCK!"
label_settings = SubResource("LabelSettings_3vs70")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Pantalla/Personajesvp/SubViewport/Marker2D/Block"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Dodge" type="Label" parent="Pantalla/Personajesvp/SubViewport/Marker2D"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "DODGE!"
label_settings = SubResource("LabelSettings_3vs70")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Pantalla/Personajesvp/SubViewport/Marker2D/Dodge"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Break" type="Label" parent="Pantalla/Personajesvp/SubViewport/Marker2D"]
visible = false
offset_left = -102.0
offset_top = -57.0
offset_right = 130.0
offset_bottom = 58.0
text = "BREAK!"
label_settings = SubResource("LabelSettings_3vs70")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Pantalla/Personajesvp/SubViewport/Marker2D/Break"]
position = Vector2(102, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_kklxi")
metadata/_edit_lock_ = true

[node name="Fondo" type="ColorRect" parent="Pantalla/Personajesvp/SubViewport"]
visibility_layer = 16
offset_top = -3.0
offset_right = 1659.0
offset_bottom = 645.0
color = Color(0, 0, 0, 0.52549)

[node name="AutoScroller" parent="Pantalla/Personajesvp/SubViewport/Fondo" instance=ExtResource("8_tihru")]
show_behind_parent = true
position = Vector2(-169, 2)
scale = Vector2(2.4, 2.4)

[connection signal="timeout" from="Personajes/TimerPoder" to="." method="_on_timer_poder_timeout"]
[connection signal="ataque_especial_activado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_ataque_especial_activado"]
[connection signal="escudo_roto" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_escudo_roto"]
[connection signal="ha_atacado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_ha_atacado"]
[connection signal="ha_bloqueado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_ha_bloqueado"]
[connection signal="ha_esquivado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_ha_esquivado"]
[connection signal="salud_acabada" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje1" to="." method="_on_personaje_1_salud_acabada"]
[connection signal="ataque_especial_activado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_ataque_especial_activado"]
[connection signal="escudo_roto" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_escudo_roto"]
[connection signal="ha_atacado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_ha_atacado"]
[connection signal="ha_bloqueado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_ha_bloqueado"]
[connection signal="ha_esquivado" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_ha_esquivado"]
[connection signal="salud_acabada" from="Pantalla/Personajesvp/SubViewport/Node2D/Personaje2" to="." method="_on_personaje_2_salud_acabada"]
